Refactor ToolProvider routing to use ToolCatalog for stable mapping of upstream tool names